--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "name": "Sous Vide Cookbook - Precision Recipes",
   "short_name": "Sous Vide",
   "description": "A modern, searchable cookbook for sous vide recipes with full-text search and advanced filtering",
-  "start_url": "/cookbook-web/",
-  "scope": "/cookbook-web/",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "orientation": "portrait-primary",
   "theme_color": "#c77d3a",
@@ -11,13 +11,13 @@
   "categories": ["food", "reference"],
   "screenshots": [
     {
-      "src": "/cookbook-web/images/hero-banner.jpg",
+      "src": "/images/hero-banner.jpg",
       "sizes": "540x720",
       "type": "image/jpeg",
       "form_factor": "narrow"
     },
     {
-      "src": "/cookbook-web/images/food-showcase.jpg",
+      "src": "/images/food-showcase.jpg",
       "sizes": "1280x720",
       "type": "image/jpeg",
       "form_factor": "wide"
@@ -25,7 +25,7 @@
   ],
   "icons": [
     {
-      "src": "/cookbook-web/favicon.ico",
+      "src": "/favicon.ico",
       "sizes": "32x32",
       "type": "image/x-icon"
     }
