--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "name": "Sous Vide Cookbook - Precision Recipes",
   "short_name": "Sous Vide",
   "description": "A modern, searchable cookbook for sous vide recipes with full-text search and advanced filtering",
-  "start_url": "/",
-  "scope": "/",
+  "start_url": "/cookbook-web/",
+  "scope": "/cookbook-web/",
   "display": "standalone",
   "orientation": "portrait-primary",
   "theme_color": "#c77d3a",
