--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sous-vide-cookbook-web",
   "version": "1.0.0",
+  "homepage": "https://lmontenegro83.github.io/cookbook-web",
   "type": "module",
   "license": "MIT",
   "scripts": {
@@ -9,7 +10,9 @@
     "start": "NODE_ENV=production node dist/index.js",
     "preview": "vite preview --host",
     "check": "tsc --noEmit",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist/public -r https://x-access-token:ghs_9IdjXsQ7S0MGehH4LQJ5Pd3vRmtBWr4Q455y@github.com/lmontenegro83/cookbook-web.git"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -77,6 +80,7 @@
     "add": "^2.0.6",
     "autoprefixer": "^10.4.20",
     "esbuild": "^0.25.0",
+    "gh-pages": "^6.3.0",
     "pnpm": "^10.15.1",
     "postcss": "^8.4.47",
     "prettier": "^3.6.2",
